Improved: - Performance has been further improved (from x10 to x100, **again**). - Off-screen items are no longer rendered. - Diff checks for rendering have been speeded up. - Observing items is now processed by a single observer. - Items which are gathering information are now indicated with dog ears of accent colour. - Terser has been introduced for more optimisation.

--- a/styles.css
+++ b/styles.css
@@ -128,3 +128,10 @@
 .tag-folder-title {
 	max-width: 100%;
 }
+
+.tree-item.nav-folder.updating {
+	background: linear-gradient(135deg, var(--interactive-accent-hover) 0%, var(--interactive-accent-hover) 50%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0) 100%);
+	background-repeat: no-repeat;
+	background-position: 0 0;
+	background-size: 10px 10px;
+}
